--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "simple html template",
   "main": "index.js",
   "scripts": {
-    "test": "compile:sass"
+    "compile:sass": "sass --watch scss:assets/css"
   },
   "repository": {
     "type": "git",
@@ -12,7 +12,7 @@
   },
   "keywords": [
     "systematic-html"
-  ],
+  ], 
   "author": "Md. Afzal Hossain",
   "license": "ISC",
   "bugs": {
@@ -20,6 +20,10 @@
   },
   "homepage": "https://github.com/38hossainafzal/systematic-html#readme",
   "dependencies": {
-    "bootstrap": "^5.1.3"
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "autoprefixer": "^10.4.0",
+    "bootstrap": "^5.1.3",
+    "postcss-cli": "^9.1.0",
+    "sass": "^1.45.0"
   }
 }
